--- a/ANN_shooter/ANN_shooter.vcxproj
+++ b/ANN_shooter/ANN_shooter.vcxproj
@@ -119,8 +119,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Animation.cpp" />
+    <ClCompile Include="Field.cpp" />
     <ClCompile Include="General.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Object.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="Projectile.cpp" />
     <ClCompile Include="Soldier.cpp" />
@@ -129,6 +131,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Animation.h" />
+    <ClInclude Include="Field.h" />
+    <ClInclude Include="Object.h" />
     <ClInclude Include="WorldConstants.h" />
     <ClInclude Include="General.h" />
     <ClInclude Include="Player.h" />
